# clickhouse_mcp_server

./: pyproject.toml
.github/workflows/: publish.yml  test.yml
clickhouse_mcp_server/: server.py
tests/: test_clickhouse_mcp_server.py
